tests/compile_time_tests/tag_attribute_argument_lhs_not_case.stderr
error: left handside of the assignment in `tag` attribute must be `case`
 --> tests/compile_time_tests/tag_attribute_argument_lhs_not_case.rs:5:11
  |
5 |     #[tag(something = "something")]
  |           ^^^^^^^^^
