tests/compile_time_tests/tag_attribute_argument_lhs_not_case.rs
use tagname::TagName;

#[derive(TagName)]
enum Cases {
    #[tag(something = "something")]
    Lower,
    Upper
}

fn main() {
}
